# hyph-bench

./: .gitignore  Makefile  README.md  gridsearch-threshold5-results.md  optimizer-results.md  pyproject.toml  run_all_optimizations.sh
data/: patgen_params.in
data/th/orchid/: orchid.wlh
data/uk/wiktionary/: uk-full-wiktionary.wlh
profiles/: wortliste8.in
scripts/: cross_validate.py  disambiguate.py  example.py  expand_weights.py  find_errors.py  gp_optimizer.py  make_tr.py  objectives.py  optimize.py  process_dump.py  statistics.py  train_test.py  visualize_gp_iterations.py
scripts/hyperparameters/: combine.py  metaheuristic.py  sample.py  score.py  search.py  stats.py
scripts/hyphenator/: hyphenator.py
