[project]
name = "hyph-bench"
version = "1.0.0"
description = "Benchmark Dataset of Hyphenated Words for Generating Hyphenation Patterns"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.10.8",
]

[project.scripts]
optimize = "scripts.optimize:main"
